back-end functions, just need the index and couple tweaks

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,41 +1,72 @@
-<div class="container-fluid1" id="title">
+<div class="container-fluid top">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-2">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Dude, Wheres My Dog?</a>
+        <a class="navbar-brand" href="/">Dude, Wheres My Dog?</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Report</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=""> Sign In</a>
-            </li>
-          </ul>
-        </div>
       </nav>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-6">
-      <h1> Find your lost dog/cat and reunite with them now!</h1>
-      <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-      <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i>Download</button>
-    </div>
-    <div class="col-lg-6">
-      <div class="hurt col-lg-6">
-        <img src="/styles/images/find dog.jpeg" alt="fnd my dog">
+    <div class="col-md-2 offset-md-2">
+      <div class="dropdown show">
+        <h1 class="topnav dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          View Our Animals
+        </h1>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item dropnav" href="/foundresults">View Lost Animals</a>
+           <a class="dropdown-item dropnav" href="/lostresults">View Found Animals</a>
+        </div>
       </div>
     </div>
-
+    <div class="col-md-2">
+     <div class="dropdown show">
+        <h1 class="topnav dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           Report an Animal
+        </h1>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item dropnav" href="/foundForm">Report Found Animal</a>
+           <a class="dropdown-item dropnav" href="/lostForm">Report Lost Animal</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+<!-- <div class="col-md-2 offset-md-1">
+      <a href="/WhatWeDo">
+        <h1 class="topnav">What We Do!</h1>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <div class="dropdown show">
+        <h1 class="topnav dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          View Our Animals
+        </h1>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item dropnav" href="/foundresults">View Lost Animals</a>
+           <a class="dropdown-item dropnav" href="/lostresults">View Found Animals</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+     <div class="dropdown show">
+        <h1 class="topnav dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           Report an Animal
+        </h1>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item dropnav" href="/foundForm">Report Found Animal</a>
+           <a class="dropdown-item dropnav" href="/lostForm">Report Lost Animal</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-1 offset-md-1">
+      <a class="nav-link link" href="">Contact</a>
+    </div>
+    <div class="col-md-1">
+      <a class="nav-link link" href=""> Sign In</a>
+</div> -->
+<!-- Found Animal Form -->
 
 
 <!-- Features -->
@@ -63,10 +94,17 @@
 
   </div>
 </section>
-<!-- Footer -->
-
-<footer id="footer">
-
-  <p>© Copyright 2019 Dude, Wheres My Dog?</p>
-
-</footer>
+  <div class="container-fluid bottom404">
+         <div class="row">
+             <div class="col-md-6 text-right">
+                <footer id="footer">
+                <p>© Copyright 2019 Dude, Wheres My Dog?</p>
+                </footer>
+             </div>
+             <div class="col-md-6 text-left">
+                 <a href="https://github.com/mjjohnston55/Project2" id="repoLink">Github Repository</a>
+             </div>
+         </div>
+     </div>
+    </div>
+</div>
