--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -83,9 +83,13 @@ li {
 }
 
 .petPic {
-  width: 175px;
-  height: 175px;
+  width: 200px;
+  height: 200px;
   border-radius: 25px;
+}
+
+.resultList {
+  font-size:150%;
 }
 
 b {
@@ -170,7 +174,7 @@ label {
 }
 
 .submit {
-  width: 60%;
+  width: 100%;
   font-size: 1.5rem;
   margin-bottom: 5%;
 }
@@ -297,7 +301,7 @@ a:focus {
 
 /* Handle */
 .main::-webkit-scrollbar-thumb {
-  background: none;
+  background: black;
 }
 
 /* Handle on hover */
