More styling, updated navbar paths, added favicon

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-2">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="/">Dude, Wheres My Dog?</a>
+        <a class="navbar-brand" href="/">Spot On!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,8 +14,8 @@
           View Our Animals
         </h1>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item dropnav" href="/foundresults">View Lost Animals</a>
-           <a class="dropdown-item dropnav" href="/lostresults">View Found Animals</a>
+          <a class="dropdown-item dropnav" href="/lostresults">View Lost Animals</a>
+           <a class="dropdown-item dropnav" href="/foundresults">View Found Animals</a>
         </div>
       </div>
     </div>
@@ -32,7 +32,6 @@
     </div>
   </div>
 </div>
-
 <!-- <div class="col-md-2 offset-md-1">
       <a href="/WhatWeDo">
         <h1 class="topnav">What We Do!</h1>
@@ -67,38 +66,31 @@
       <a class="nav-link link" href=""> Sign In</a>
 </div> -->
 <!-- Found Animal Form -->
-
-
 <!-- Features -->
-
 <section id="features">
-
   <div class="row">
     <div class="feature-box col-lg-4">
       <center><i class="icon fas fa-check fa-4x"></i></center>
       <h3>Easy to use.</h3>
       <p class="white">So easy to use, even your dog could do it.</p>
     </div>
-
     <div class="feature-box col-lg-4">
       <center> <i class="icon far fa-dot-circle fa-4x"></i></center>
       <h3>Locate</h3>
-      <p class="white">Neque porro quisquam est qui dolorem</p>
+      <p class="white">Find out where your cat snuck off to.</p>
     </div>
-
     <div class="feature-box col-lg-4">
       <center> <i class="icon fas fa-heart fa-4x"></i></center>
       <h3>Reunite.</h3>
-      <p class="white">Neque porro quisquam est qui dolorem</p>
+      <p class="white">Dogs and cats are not our whole life, but they make our lives whole.</p>
     </div>
-
   </div>
 </section>
   <div class="container-fluid bottom404">
          <div class="row">
              <div class="col-md-6 text-right">
                 <footer id="footer">
-                <p>© Copyright 2019 Dude, Wheres My Dog?</p>
+                <p>© Copyright 2019 Spot On?</p>
                 </footer>
              </div>
              <div class="col-md-6 text-left">
