--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Dude WHeres My Dog?</title>
+  <title>Spot On!</title>
 
     <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
@@ -30,6 +30,8 @@
 
    <!--Javascript-->
    <script src="/js/index.js"></script>
+
+   <link rel="icon" href="/styles/images/paw.png">
 
 </head>
 
