--- a/views/WhatWeDo.handlebars
+++ b/views/WhatWeDo.handlebars
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-2">
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="/">Dude, Wheres My Dog?</a>
+                <a class="navbar-brand" href="/">Spot On!</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
                     <span class="navbar-toggler-icon"></span>
                 </button>
