--- a/views/foundForm.handlebars
+++ b/views/foundForm.handlebars
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-2">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="/">Dude, Wheres My Dog?</a>
+        <a class="navbar-brand" href="/">Spot On!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,8 +14,8 @@
           View Our Animals
         </h1>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item dropnav" href="/foundresults">View Lost Animals</a>
-           <a class="dropdown-item dropnav" href="/lostresults">View Found Animals</a>
+          <a class="dropdown-item dropnav" href="/lostresults">View Lost Animals</a>
+           <a class="dropdown-item dropnav" href="/foundresults">View Found Animals</a>
         </div>
       </div>
     </div>
