--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -54,7 +54,7 @@
     <div class="row">
         <div class="col-md-6 text-right">
             <footer id="footer">
-                <p>© Copyright 2019 Dude, Wheres My Dog?</p>
+                <p>© Copyright 2019 Spot On!</p>
             </footer>
         </div>
         <div class="col-md-6 text-left">
