--- a/views/foundForm.handlebars
+++ b/views/foundForm.handlebars
@@ -86,7 +86,7 @@
     </div>
     <div class="col-md-6">
       <section id="testimonials">
-        <form class="form-horizontal" method="POST" action="/Lost_Animals/create">
+        <form class="form-horizontal" method="POST" action="/Found_Animals/create">
           <label class="control-label col-sm-12">Animal Name:</label>
           <div class="col-sm-12">
             <input type="text" class="form-control" placeholder="Enter Name" name="name">
